Navigation: re-introduce hover mechanic - remove special handling for Data Region dropdown columns as regions no longer overflow - hover mechanic disabled until further development

--- a/core/resources/styles/scss/labkey/components/_navigation.scss
+++ b/core/resources/styles/scss/labkey/components/_navigation.scss
@@ -16,6 +16,12 @@
   .navbar-header {
     float: left;
 
+    .dropdown-menu {
+      margin: -1px 0 0;
+      left: -1px;
+      border-top-color: transparent;
+    }
+
     .navbar-toggle {
       color: $lk-page-nav-text-color;
       float: left;
